--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,5 @@
-SESSION_NAME=
-BOT_TOKEN= 
-OWNER_ID=
+SESSION_NAME=ItxmeTY4467_bot
+BOT_TOKEN= 6965255627:AAGHAspJSX01m1vaKfp6faZdWRJg-hDQtKg
+OWNER_ID=5976437467
 
 
